More text visibility in private message title bar fixes
Relates to #541

--- a/src/components/PrivateChat/PrivateChat.styl
+++ b/src/components/PrivateChat/PrivateChat.styl
@@ -29,7 +29,7 @@
 
 
     .title {
-        themed background-color shade5
+        themed background-color shade4
         border-bottom: 1px solid #aaaaaa;
         padding-left: 0.1em;
         padding-right: 0.1em;
@@ -59,12 +59,12 @@
         color: #666;
         border: 1px solid transparent;
         cursor: pointer;
-        themed color shade3
+        themed color shade1
     }
 
     .fa:hover, .ogs-goban:hover {
         //color: #000;
-        themed color shade4
+        themed color shade0
     }
 
     .fa-bullhorn {
@@ -157,7 +157,7 @@
     }
 
     .title:hover {
-        themed background-color shade0
+        themed background-color shade5
         cursor: pointer;
     }
 }
